# gsg

./: .gitignore  Cargo.toml  conversation.yaml  prompt.md  }
jul1/: .gitignore  Cargo.toml  my.patch  my_diff.patch  my_patch.patch  profile.json  rustc-ice-2024-08-14T08_57_01-31104.txt  rustc-ice-2024-08-23T17_36_14-2656.txt  rustc-ice-2024-08-23T17_36_24-2678.txt  rustc-ice-2024-08-23T17_36_28-2689.txt  rustc-ice-2024-08-23T17_36_32-2700.txt  rustc-ice-2024-08-23T17_36_37-2706.txt  rustc-ice-2024-08-23T17_39_16-2930.txt  timings.csv
jul1/conversations/: conversation_20240901_190017.json  conversation_20240901_200525.json  conversation_20240911_173449.json
jul1/src/: bitset256.rs  combinator.rs  compiler.rs  compiler_greedy.rs  convert.rs  dfa.rs  fast_combinator.rs  frame_stack.rs  grammar.rs  internal_vec.rs  left_recursion_guard_data.rs  lib.rs  map.rs  my_tinyvec.rs  parse_state.rs  stats.rs  transpose.rs  trie.rs  u8set.rs  unicode.rs  unicode_categories.rs
jul1/src/_00_general/: mod.rs
jul1/src/_01_parse_state/: mod.rs  parse_results.rs  right_data.rs  traits.rs
jul1/src/_02_traits/: combinator.rs  convert.rs  mod.rs
jul1/src/_03_combinators/: cache.rs  derived.rs  mod.rs  unicode.rs
jul1/src/_04_tokenizer/: charmap.rs  finite_automata.rs  mod.rs  tokenizer_combinators.rs
jul1/src/_05_unicode_categories/: mod.rs  unicode_categories.rs
jul1/src/_06_tests/: basic_tests.rs  mod.rs  utils.rs
jul1/src/_07_python/: dump_python_gram.py  indent_combinator.rs  python_grammar.rs  python_tokenizer.rs  test_python.rs
jul1/src/benches/: python.rs
jul1/src/combinators/: brute_force.rs  brute_force_fn.rs  cache.rs  cache_first.rs  check_right_data.rs  choice.rs  choicen.rs  combinator_stats.rs  continuation.rs  custom_fn.rs  cut.rs  deferred.rs  derived.rs  dyn_parser.rs  dyn_wrapper.rs  eat.rs  eat_bytestring_choice.rs  eat_string.rs  eat_u8.rs  eat_u8_matching.rs  eps.rs  fail.rs  fast.rs  forbid_consecutive_matches.rs  forbid_follows.rs  forward_ref.rs  forward_ref2.rs  frame_stack_ops.rs  greedy.rs  indent.rs  left_recursion_guard.rs  lookahead.rs  mod.rs  mutate_right_data.rs  negative_lookahead.rs  opt.rs  prevent_consecutive_matches.rs  profile.rs  reference.rs  repeat1.rs  (+6 more)
jul1/src/general_data_structures/: mod.rs
jul1/src/parse_state/: mod.rs  parse_results.rs  right_data.rs  right_up_data.rs  squash_trait.rs  traits.rs  unambiguous_parse_results.rs  up_data.rs
jul1/src/python/: dump_python_gram.py  grammar_analysis.py  indent_combinator.rs  mod.rs  python_grammar.rs  python_grammar.schema.json  python_tokenizer.rs  remove_left_recursion.py  test_python.rs  unicode_categories.py
jul1/src/tests/: mod.rs  (+12 more)
nov1/python/: Cargo.toml  example.py  logit_processor.py
(+305 files in other folders)
