cargo-features = ["edition2024"]

[package]
name = "jun3"
version = "0.1.0"
edition = "2024"

[dependencies]
derivative = "2.2.0"
kdam = "0.5.2"
lazy_static = "1.5.0"
lru = "0.12.4"
smallvec = "1.13.2"
parking_lot = "0.12.3"
dashmap = "6.0.1"
once_cell = "1.19.0"
unicode-general-category = "0.6.0"

# Run tests with opt level 3
#[profile.dev]
#opt-level = 1

[profile.test]
# Opt 1
opt-level = 2
## Keep debug info
#debug = "full"

