cargo-features = ["edition2024"]

[package]
name = "jun3"
version = "0.1.0"
edition = "2024"

[dependencies]
derivative = "2.2.0"
kdam = "0.5.2"
lazy_static = "1.5.0"
lru = "0.12.4"
smallvec = "1.13.2"
parking_lot = "0.12.3"
dashmap = "6.0.1"
once_cell = "1.19.0"
unicode-general-category = "0.6.0"
nom = "7.1.3"
arrayvec = "0.7.4"
aliasable = "0.1.3"
cast = "0.3.0"
castaway = "0.2.3"

#[profile.dev]
#opt-level = 1

[profile.test]
opt-level = 2
## Keep debug info
#debug = "full"


[profile.profiling]
inherits = "release"
debug = true

[[bin]]
name = "bench_python"
path = "src/benches/python.rs"
[profile.samply]
inherits = "release"
debug = true
