[package]
name = "_sep1"
version = "0.1.0"
edition = "2021"

## See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_sep1"
crate-type = ["cdylib"]

[dependencies]
bimap = "0.6.3"
pyo3 = { version = "0.23.0", features = ["extension-module", "macros"] }
sep1 = { path = "../" }

[build-dependencies]
pyo3 = "0.23.0"
regex = "1.11.1"
