[package]
name = "_sep1"
version = "0.1.0"
edition = "2021"

## See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_sep1"
crate-type = ["cdylib"]

[dependencies]
bimap = "0.6.3"
bitvec = "1.0.1"
kdam = "0.6.0"
numpy = { version = "0.22.1", features = ["gil-refs"] }
pyo3 = { version = "0.22.6", features = ["extension-module", "macros"] }
sep1 = { path = "../" }

[build-dependencies]
pyo3 = "0.22.0"
regex = "1.11.1"
